# cargo_multimod_example

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/proto/helloworld/: Cargo.toml  build.rs
crates/proto/helloworld/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
